<resources>
    <string name="loading_splash_text">Loading</string>
    <string name="menu_load">Load</string>
    <string name="menu_settings">Settings</string>

    <string name="menu_game_name_1">Sandbox</string>
    <string name="menu_game_sub_1">4x6 - 5 bombs"</string>

    <string name="menu_game_name_2">Baby</string>
    <string name="menu_game_sub_2">10x10 - 12 bombs</string>

    <string name="menu_game_name_3">Atomic Baby</string>
    <string name="menu_game_sub_3">10x10 - 25 bombs</string>

    <string name="menu_game_name_4">Profi</string>
    <string name="menu_game_sub_4">15x15 - 50 bombs</string>

    <string name="menu_game_name_5">Mom, take me back</string>
    <string name="menu_game_sub_5">25x25 - 100 bombs</string>

    <string name="menu_game_name_6">Inferno</string>
    <string name="menu_game_sub_6">50x50 - 503 bombs</string>

    <string name="menu_game_name_7">Chuck Norris</string>
    <string name="menu_game_sub_7">6x20 - 40 bombs</string>

    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>

    <string name="app_name">Minesweeper</string>
    <string name="new_game">New game</string>
    <string name="settings">Settings</string>

    <string name="grid_summary_line">Dimensions %1$dx%2$d - %3$d bombs</string>

    <string name="pref_showtime">Show time</string>
    <string name="pref_discoverymode">Set revealing mode</string>
    <string name="pref_discoverymode_desc">Disabled: No tile will be revealed when a "number tile" is touched.\nEasy: Only when the number of flagged bombs is equal to the "number tile", the surrounding tiles will be revealed.\nNormal: Only when the number of flagged bombs is equal or bigger to the "number tile", the surrounding tiles will be revealed.\nHard: The surrounding tiles from a "number tile" will be revealed, no matter the flagged bombs around it.\nAutomatic: Tiles will be automatically open. Might be risky... Be careful with what you flag!</string>

    <string name="pref_revealFirst">Auto reveal first tile</string>
    <string name="pref_revealFirst_desc">Automatically open an empty tile on start</string>

    <string name="pref_solvable">Generate solvable grid</string>
    <string name="pref_solvable_desc">Grid can be solved without RNG</string>

    <string name="pref_visualHelp">Enable visual help</string>
    <string name="pref_visualHelp_desc">Each numbered tile will indicate how many nearby mines has been flagged</string>

    <string name="pref_visualtheme">Visual Theme</string>
    <string-array name="pref_discoverymode_title">
        <item>Disabled</item>
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
        <item>Automatic</item>
    </string-array>
    <string-array name="pref_discoverymode_value">
        <item>3</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>4</item>
    </string-array>

    <string-array name="pref_visualtheme_title">
        <item>Default</item>
        <item>Dots</item>
        <item>Dots Classic</item>
        <item>Windows Classic</item>
    </string-array>
    <string-array name="pref_visualtheme_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
