<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultBackground"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/hueSelector"
        android:orientation="vertical">

        <org.oar.minesweeper.ui.views.components.MenuButtonView
            android:id="@+id/loadButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="12dp"
            android:paddingVertical="24dp"
            android:background="@color/buttonGreen"
            app:text="@string/menu_load" />

        <org.oar.minesweeper.ui.views.components.MenuButtonView
            android:id="@+id/startGame1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="12dp"
            android:paddingVertical="20dp"
            android:background="@color/buttonBlue"
            app:text="@string/menu_game_name_1"
            app:subText="@string/menu_game_sub_1" />

        <org.oar.minesweeper.ui.views.components.MenuButtonView
            android:id="@+id/startGame2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="12dp"
            android:paddingVertical="20dp"
            android:background="@color/buttonBlue"
            app:text="@string/menu_game_name_2"
            app:subText="@string/menu_game_sub_2" />

        <org.oar.minesweeper.ui.views.components.MenuButtonView
            android:id="@+id/startGame3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="12dp"
            android:paddingVertical="20dp"
            android:background="@color/buttonBlue"
            app:text="@string/menu_game_name_3"
            app:subText="@string/menu_game_sub_3" />

        <org.oar.minesweeper.ui.views.components.MenuButtonView
            android:id="@+id/startGame4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="12dp"
            android:paddingVertical="20dp"
            android:background="@color/buttonBlue"
            app:text="@string/menu_game_name_4"
            app:subText="@string/menu_game_sub_4" />

        <org.oar.minesweeper.ui.views.components.MenuButtonView
            android:id="@+id/startGame5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="12dp"
            android:paddingVertical="20dp"
            android:background="@color/buttonBlue"
            app:text="@string/menu_game_name_5"
            app:subText="@string/menu_game_sub_5" />

        <org.oar.minesweeper.ui.views.components.MenuButtonView
            android:id="@+id/visualThemeButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="12dp"
            android:paddingVertical="24dp"
            android:background="@color/buttonGray"
            app:text="@string/visual_theme" />

        <org.oar.minesweeper.ui.views.components.MenuButtonView
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="12dp"
            android:paddingVertical="24dp"
            android:background="@color/buttonGray"
            app:text="@string/menu_settings" />

    </LinearLayout>

</ScrollView>