<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:orientation="vertical">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/revealFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_revealFirst"
        android:tooltipText="@string/pref_revealFirst_desc"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/solvable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_solvable"
        android:tooltipText="@string/pref_solvable_desc" />
</LinearLayout>
